# Iron_crab-eval

./: AGENTS.md  Cargo.toml  README.md
.cursor/: hooks.json
.cursor/hooks/: block-cross-repo-access.py
.cursor/rules/: eval-test-authority.mdc
.github/workflows/: eval-invariants-manual.yml  rust.yml
docs/: EVAL_TEST_CANDIDATES.md  Tests_todo.md
docs/plans/: plan_arb_profit_first_rebuild.md  plan_dex_parser_pumpswap_fix.md  plan_fix38_removal_market_order.md  plan_fix_pool_discovery_and_bootstrap.md  plan_hot_path_rpc_freedom.md  plan_k_performance.md  plan_langgraph_development_workflow_migration.md  plan_position_authority_sot_migration.md  plan_positions_liquidation_fix.md  plan_pumpfun_6024_cashback_fix.md  plan_wallet_delta_atomic_update.md
docs/spec/: ARB_QUOTE_CONTRACT.md  ARB_TRACK_REQUESTS.md  DEFINITION_OF_DONE.md  INVARIANTS.md  ROLE_SEPARATION.md  STORAGE_CONVENTIONS.md  TARGET_ARCHITECTURE.md
docs/supervisor/: MCP_DOCKER_SETUP.md  OPENBRAIN_MCP_HANDOFF.md  OPENBRAIN_MCP_SPEC.md  OPENBRAIN_NEXT_STEPS.md  PROPOSAL_SUPERVISOR_FAILURE_WORKFLOW.md  SETUP.md  agent_body_scope46.json  cloud_prompt_scope46_eval_agent.txt  context_arch_audit_offene_verstoesse.md  context_d2_execution_finality.md  context_fix-momentum-ath-drawdown-calc.md  context_k_phase1_slot_to_send.md  context_langgraph-demo.md  handoff_cashback_tests.md  handoff_eval_arb_quote_m1_m2.md  handoff_eval_intent_delivery_latency_slo.md  handoff_eval_intent_delivery_tests_ab.md  handoff_i7_pumpfun_rpc_hotpath_fix.md  handoff_impl_arb_m1_pool_quote_foundation.md  handoff_impl_arb_m2_profit_first_v2.md  handoff_impl_ee_intent_delivery_segment_metrics.md  handoff_liquidation_sim_discovery_force_refresh.md  handoff_pa1_impl_readonly_position_authority.md  handoff_pa2_impl_position_authority_runtime_metrics.md  handoff_pool_discovery_tests.md  handoff_positions_liquidation_tests.md  handoff_pump_amm_sell_extended_jetstream_propagation.md  handoff_pumpswap_amm_tests.md  handoff_scope46_eval_pumpswap_build_swap_ix_extended_sell.md  (+22 more)
tests/: error_detection_6005.rs  golden_replay_blackbox.rs  invariants_6005_detection.rs  invariants_arb_multi_hop_pool_quote.rs  invariants_arb_quote_contract.rs  invariants_arb_track_requests.rs  invariants_arbitrage_engine.rs  invariants_arbitrage_profit.rs  invariants_compute_budget.rs  invariants_cross_dex_cold_path_reserves.rs  invariants_dex_connector.rs  invariants_dex_parser_cpi.rs  invariants_dex_parser_pumpswap.rs  invariants_hot_path_no_rpc.rs  invariants_intent_delivery_latency_under_load.rs  invariants_liquidation_flow.rs  invariants_lock_manager.rs  invariants_market_data_i4b_ingest_no_tracked_read.rs  invariants_market_data_i4b_nonblocking_ingest.rs  invariants_market_data_tracking_single_writer.rs  invariants_md_hard_admission_cap_priority.rs  invariants_momentum_wallet_position_ssot.rs  invariants_open_positions.rs  invariants_orca_ix.rs  invariants_pool_cache_sync.rs  invariants_pool_discovery.rs  invariants_pool_matching.rs  invariants_pump_amm_sell_layout_tier.rs  invariants_pumpfun_bonding_curve_recovery.rs  invariants_pumpfun_cashback.rs  invariants_pumpfun_ix.rs  invariants_pumpfun_market_order.rs  invariants_pumpswap_amm_liquidation.rs  invariants_pumpswap_recovery_semantics.rs  invariants_quote_monotonic.rs  invariants_raydium_slippage.rs  invariants_router_slippage.rs  invariants_tokens_per_sol.rs  invariants_trade_intents_consumer_deliver_policy.rs  invariants_trailing_session_high.rs  (+5 more)
(+8 files in other folders)
