[package]
name = "ironcrab-eval"
version = "0.1.0"
edition = "2021"

[dependencies]
# Cloud Agents: git-Dependency fuer isolierte VM-Builds
# CI + lokal: [patch] ueberschreibt mit Sibling-Pfad (siehe CI workflows)
ironcrab = { git = "https://github.com/Exploratorsclub/Iron_crab.git", branch = "architecture-rebuild" }
solana-sdk = "=3.0.0"

[dev-dependencies]
anyhow = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version = "1", features = ["serde"] }
tempfile = "3"
