[package]
name = "ironcrab-eval"
version = "0.1.0"
edition = "2021"

[dependencies]
# Cloud Agents: git-Dependency fuer isolierte VM-Builds
# CI + lokal: [patch] ueberschreibt mit Sibling-Pfad (siehe CI workflows)
ironcrab = { git = "https://github.com/Exploratorsclub/Iron_crab.git", rev = "b4c059892cd4c10863371318fb92c1ae8d03e029" }
# Hinweis: `ironcrab` nutzt `yellowstone-grpc` mit `branch = "master"` ohne feste Revision.
# Neuere `master`-Commits erweitern die Proto-Structs (z. B. `cuckoo_accounts_filter`) und brechen
# den Build von `ironcrab` @ f7b3092. Im `Cargo.lock` bleiben `yellowstone-grpc-*` daher auf
# `branch=master#b39a415a219e842143f97440a0d0ef04207152c2` gepinnt — bei `cargo update` Lockfile pruefen.
# architecture-rebuild: Phase3 I-4e arb track_requests (b4c0598); lockfile bei cargo update pruefen.
# Phase4 P3 wallet-position SSOT: ironcrab-rev erst nach Impl P2/P3-Merge bumpen; bis dahin grep-gates skippen.
solana-sdk = "=3.0.0"

[dev-dependencies]
spl-associated-token-account-client = "2.0.0"
solana-pubkey = "2.1"
anyhow = "1"
async-nats = "0.46"
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version = "1", features = ["serde"] }
tempfile = "3"
which = "6"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json"] }
bytes = "1"
